# opsbox-core

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_report.yaml
.github/workflows/: format.yml  publish.yml  pytest.yml  ruff.yml
core/: base_hooks.py  cli.py  config.py  main.py  plugins.py  utils.py
docs/: index.md
docs/getting_started/: installation.md  running.md
opsbox/: __init__.py  base_hooks.py  cli.py  config.py  main.py  plugins.py  utils.py
opsbox/bundled/cli/: cli.py  test_cli.py
opsbox/bundled/cli/cli/: test_cli.py
opsbox/bundled/cli/opsbox_cli_output.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
opsbox/bundled/json_file/: test_json_file.py
opsbox/bundled/json_file/json_file/: json_file.py  test_json_file.py
opsbox/bundled/json_file/opsbox_json_file_output.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
opsbox/bundled/text_file/: test_text_file.py
opsbox/bundled/text_file/opsbox_text_file_output.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
opsbox/bundled/text_file/text_file/: test_text_file.py  text_file.py
tests/: mocks.py  test_cli.py  test_config.json
tests/config/: conftest.py  test_arg_grabbing.py  test_file_finding.py  test_loading.py  test_property_access.py
tests/integration/general_handler/: test_handler.py
tests/integration/rego_handler/: test_handler.py
tests/invalid_test_plugins/invalid_dep/: manifest.toml  test_6.py
tests/invalid_test_plugins/invalid_key/: manifest.toml  test_6.py
tests/invalid_test_plugins/invalid_toml/: manifest.toml  test_7.py  test_7.rego
tests/registry/: conftest.py  test_loading.py  test_properties.py  test_registry.py  test_toml.py
tests/test_plugins/handler_plugin/: manifest.toml  test_3.py
tests/test_plugins/input_plugin/: manifest.toml  test_1.py
tests/test_plugins/output_plugin/: cli.py  manifest.toml
tests/test_plugins/provider_plugin/: manifest.toml  test_5.py
tests/test_plugins/rego_plugin/: manifest.toml  test_2.py
